Added content to test page

--- a/test.njk
+++ b/test.njk
@@ -2,8 +2,9 @@
 layout: layouts/home.njk
 permalink: /test/
 eleventyNavigation:
-  key: My stuff
+  key: Test page
   order: 2
 ---
 
-<h1>My stuff</h1>
+<h1>Test page</h1>
+<p>This is just a vey simple test page</p>
