--- a/test.njk
+++ b/test.njk
@@ -8,6 +8,21 @@ eleventyNavigation:
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
+<div class="container">
+  <header>
+    <h1 class="text-center">Test page</h1>
+  </header>
 
-<h1>Test page</h1>
-<p>This is just a vey simple test page</p>
+  <main style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
+              background-size: cover;
+              background-repeat: no-repeat;
+              height: 800px;">
+
+    <p>This is just a vey simple test page</p>
+
+  </main>
+  <footer class="text-center">
+  &copy;2021
+  <footer>
+
+</div>
