--- a/contact.njk
+++ b/contact.njk
@@ -25,6 +25,10 @@ eleventyNavigation:
     <label>Message: <textarea name="message"></textarea></label>
   </p>
   <p>
+    <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions
+  </p>
+  <p>
     <button type="submit">Send</button>
   </p>
+  
 </form>
