--- a/contact.njk
+++ b/contact.njk
@@ -8,7 +8,7 @@ eleventyNavigation:
 
 <h1>Contact Form</h1>
 
-<form name="contact" method="POST" data-netlify="true">
+<form name="contact" method="POST" data-netlify="true" style="border: 2px solid black; padding: 10px; width: fit-content; border-radius: 5%;">
   <p>
     <label>Your Name: <input type="text" name="name" /></label>   
   </p>
