fixed blog layout

--- a/_includes/layouts/blog.njk
+++ b/_includes/layouts/blog.njk
@@ -6,6 +6,7 @@ templateClass: tmpl-blog
 <p>
   <span style="font-weight: bold;">Rating:</span>
   {{ rating }}
+  <img src="{{ thumbnail | url }}"/>
 </p>
 
 
