--- a/gallery.njk
+++ b/gallery.njk
@@ -4,7 +4,7 @@ permalink: /gallery/
 eleventyNavigation:
   key: Gallery
   order: 4
-title: Blog list
+title: Gallery list
 ---
 
 <h1>{{title}}</h1>
