--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,7 @@ main :first-child {
 }
 header {
   border-bottom: 1px dashed var(--lightgray);
+  background-color: salmon;
 }
 header:after {
   content: "";
@@ -121,10 +122,18 @@ code {
 
 /* Header */
 .home {
-  padding: 0 1rem;
+  padding: 2px 2rem;
   float: left;
   margin: 1rem 0; /* 16px /16 */
   font-size: 1em; /* 16px /16 */
+}
+.home a:hover {
+  text-decoration: none;
+}
+.home:hover {
+  transform: scale(1.2);
+  transition: 0.2s;
+  text-decoration: none;
 }
 .home :link:not(:hover) {
   text-decoration: none;
@@ -140,13 +149,24 @@ code {
 .nav-item {
   display: inline-block;
   margin-right: 1em;
+  transition: 0.2s;
+  padding: 2px;
 }
 .nav-item a[href]:not(:hover) {
   text-decoration: none;
 }
+.nav-item a:hover {
+  text-decoration: none;
+}
+.nav-item:hover{
+  transform: scale(1.2);
+  transition: 0.2s;
+}
+
 .nav-item-active {
   font-weight: 700;
-  text-decoration: underline;
+  background-color:rgba(255, 255, 0, 0.8);
+  border-radius: 10%;
 }
 
 /* Posts list */
