hidden gallery from navbar

--- a/gallery.njk
+++ b/gallery.njk
@@ -5,6 +5,7 @@ eleventyNavigation:
   key: Gallery
   order: 4
 title: Gallery list
+eleventyExcludeFromCollections: true
 ---
 
 <h1>{{title}}</h1>
