--- a/index.njk
+++ b/index.njk
@@ -6,9 +6,9 @@ eleventyNavigation:
 ---
 
 {% set maxPosts = collections.posts.length | min(3) %}
-<h1>Latest {% if maxPosts == 1 %}Post{% else %}{{ maxPosts }} Posts{% endif %}</h1>
+<h1>My Projects</h1>
 
-{% set postslist = collections.posts | head(-3) %}
+{% set postslist = collections.posts %}
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
